# rust_learning_notes

./: README.md
01/: README.md
basic/: README.md
function_pointer_and_closure/: Cargo.toml  README.md
function_pointer_and_closure/src/: main.rs
logger/: README.md
logger/logger-demo/: Cargo.toml
logger/logger-demo/src/: lib.rs
ownership/: README.md
ownership/src/: main.rs  ownership_borrow.rs  ownership_move.rs  ownership_slice.rs
