[package]
name = "logger-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
tracing-oslog = "0.2.0"